# mso

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/: commands.md  configuration.md  protocol.md  tui.md
src/: cli.rs  commands.rs  lib.rs  main.rs  protocol.rs  util.rs
src/client/: daemonize.rs  mod.rs  runner.rs
src/daemon/: listener.rs  log_db.rs  mod.rs  persist.rs  prometheus.rs  signal.rs  state.rs  supervisor.rs  telemetry.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
src/tui/widgets/: detail_pane.rs  log_view.rs  mod.rs  notif_panel.rs  process_list.rs  status_bar.rs
tests/: integration.rs  tui_snapshot.rs
