[package]
name = "mso"
version = "0.1.0"
edition = "2021"
description = "Multi-Stream Orchestrator — CLI process wrapper, daemon, and TUI dashboard"
license = "MIT"
authors = ["MSO Contributors"]
repository = "https://github.com/anomalyco/mso"
homepage = "https://github.com/anomalyco/mso"
readme = "README.md"
keywords = ["process-manager", "tui", "daemon", "cli", "monitoring"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mso"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "signal", "time", "process", "fs"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
bincode = "1"
serde_json = "1"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
nix = { version = "0.29", features = ["signal", "process", "fs"] }
dashmap = "6"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
libc = "0.2"
futures = "0.3"
rusqlite = { version = "0.34", features = ["bundled"] }
toml = "0.8"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
strip = true
